[package]
name = "google-api-rust-client-not-offical"
edition = "2021"
version = "0.2.0"
[lib]
name = "google_api_rust_client_not_official"

[dependencies]
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", features = ["multipart", "json"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
tokio = {version = "1.29.1", features = ["full"] }
url_encoded_data = "0.6.1"
dotenv = "0.15.0"
dotenvy = "0.15.7"
async-trait = "0.1.73"
anyhow = "1.0.75"
logger = "0.4.0"
log = "0.4.22"
